# fast_api_curso

./: .gitignore  pyproject.toml
fast_api_curso/: app.py  database.py  models.py  schemas.py  security.py
fast_api_curso/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 64b4505343c7_create_users_table.py  7d61acff2c0b_create_todos_table.py  851d5147fa74_add_creat_at_and_update_at.py  9dad6c5eac8e_add_column_update_at.py  f0f4dff8400f_alter_column.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
